# fishTradeDemo

./: .gitignore  README.md
python/: README.md  pyproject.toml  requirements.txt
python/fishtrade/: __init__.py  __main__.py  cli.py
python/fishtrade/agents/: __init__.py
python/fishtrade/config/: settings.py  thresholds.py
python/fishtrade/graph/: __init__.py  builder.py  checkpoint.py  routes.py
python/fishtrade/llm/: __init__.py  client.py  factory.py  prompt_utils.py  retry.py
python/fishtrade/models/: __init__.py  debate.py  execution.py  portfolio.py  research.py  risk.py  state.py
python/fishtrade/observability/: __init__.py  logger.py  metrics.py  node_log.py  trace.py
python/fishtrade/portfolio/: __init__.py  nav.py  store.py
python/fishtrade/reporting/: __init__.py  render.py
python/fishtrade/tools/: __init__.py  feature_flags.py  indicators_fund.py  indicators_sent.py  indicators_tech.py  industry_classifier.py  var_calculator.py  yf_cache.py  yf_client.py
python/scripts/: d5_aapl.py
python/tests/: conftest.py
python/tests/boundary/: conftest.py  test_ark_rate_limit.py  test_cli_paper_missing_key.py  test_debate_all_hold.py  test_debate_rounds_zero_three.py  test_drawdown_limit.py  test_execution_failed.py  test_hitl_rejection.py  test_invalid_ticker.py  test_llm_timeout_fallback.py  test_low_liquidity_warning.py  test_new_listing_degraded.py  test_paper_partial_fill.py  test_portfolio_first_run.py  test_render_failed.py  test_var_exceeded.py  test_yfinance_rate_limit.py
python/tests/integration/: _fixtures.py  test_debate_loop.py  (+5 more)
(+47 files in other folders)
