[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishtrade"
version = "0.1.0"
description = "Multi-agent quantitative trading decision system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fishtrade contributors" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["fishtrade*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not network'"
markers = [
    "network: tests that hit live yfinance/Ark; opt-in via -m network",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
